# plan_finance_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
bot/: bot.py  commands.py  config.py  depends.py  loader.py  main.py  states.py
bot/core/: base.py  database.py
bot/handlers/: __init__.py  auxiliary.py  categories.py  general.py  test.py
bot/handlers/categories/: __init__.py  add.py  auxiliary.py  delete.py  filter.py  list.py  retrieve.py
bot/handlers/tasks/: __init__.py  add.py  auxiliary.py  completed.py  delete.py  list.py  retrieve.py
bot/keyboards/: __init__.py  auxiliary.py  categories.py  general.py  tasks.py
bot/loggers/: __init__.py  decorates.py  settings.yml
bot/middlewares/: __init__.py  authorization.py  categories.py  users.py
bot/models/: __init__.py  categories.py  many_to_many.py  mixins.py  tasks.py  users.py
bot/repositories/: categories.py  tasks.py  users.py
bot/schemes/: categories.py  tasks.py  users.py
bot/services/: categories.py  tasks.py  users.py
bot/utils/: database.py
migrations/: env.py
migrations/versions/: 1b3aa68145c6_update_user.py  62a9b3a26c25_init.py  682f3af71a85_add_user_created_at_field.py  dfde3e5af070_update_models.py  e373af3eeb29_many.py  ef71d5130a92_init.py
src/: Dockerfile
src/app/: alembic.ini  main.py
src/app/core/: base.py
src/app/middlewares/: __init__.py  authorization.py
src/app/migrations/: env.py
src/app/models/: __init__.py  users.py
