[tool.poetry]
name = "nice_finance_bot"
version = "0.1.0"
description = ""
authors = ["iliyB <iliy-b@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.941"
aiohttp = "^3.8.1"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.32"}
importlib-resources = "^5.6.0"
asyncpg = "^0.25.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
