[tool.poetry]
name = "nice_finance_bot"
version = "0.1.0"
description = ""
authors = ["iliyB <iliy-b@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
aiohttp = "^3.8.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.32"}
importlib-resources = "^5.6.0"
asyncpg = "^0.25.0"
python-dotenv = "^0.20.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.5"
pydantic-sqlalchemy = "^0.0.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
alembic = "^1.7.7"
mypy = "^0.942"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
