[tool.poetry]
name = "plan-time-bot"
version = "0.1.0"
description = ""
authors = ["iliyB"]
readme = "README.md"
packages = [{include = "plan_time_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b4"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
asyncpg = "^0.26.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.11"
pydantic = "^1.10.1"
aiogram-calendar = "^0.1.1"
aioredis = "^2.0.1"
emoji = "^2.0.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
